# Monopoly

./: CMakeLists.txt  main.cpp
include/: AllInPlayer.hpp  BlackHoleField.hpp  Board.hpp  CosmicDie.hpp  DepositField.hpp  Die.hpp  Dies.hpp  Field.hpp  Game.hpp  NormalDie.hpp  Player.hpp  Prison.hpp  RandomField.hpp  RandomPlayer.hpp  RealEstateField.hpp  RealPlayer.hpp  StandardField.hpp  StartField.hpp  forlolz.hpp
src/: AllInPlayer.cpp  BlackHoleField.cpp  Board.cpp  CosmicDie.cpp  DepositField.cpp  Die.cpp  Dies.cpp  Field.cpp  Game.cpp  NormalDie.cpp  Player.cpp  Prison.cpp  RandomField.cpp  RandomPlayer.cpp  RealEstateField.cpp  RealPlayer.cpp  StandardField.cpp  StartField.cpp  forlolz.cpp
test/: simpletest.cpp
